about and project page responsite

--- a/project.html
+++ b/project.html
@@ -87,7 +87,10 @@
                 <div class="pt-content" data-pt-con="all">
                     <div class="project-box">
                         <div class="row">
-                            <div class="col-md-5 pro-left pro-type-1">
+                            <div class="col-lg-7 pro-right order-lg-1">
+                                <div class="pro-b-img"><img src="image/project-1.png" alt="" class="w-100"></div>
+                            </div>
+                            <div class="col-lg-5 pro-left pro-type-1 order-lg-0">
                                 <div class="pro-b-text">
                                     <div class="tag-box">
                                         <div class="tag">Social Media</div>
@@ -111,17 +114,15 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-7 pro-right">
-                                <div class="pro-b-img"><img src="image/project-1.png" alt="" class="w-100"></div>
-                            </div>
+
                         </div>
                     </div>
                     <div class="project-box">
                         <div class="row">
-                            <div class="col-md-7 pro-right">
+                            <div class="col-lg-7 pro-right">
                                 <div class="pro-b-img"><img src="image/project-2.png" alt="" class="w-100"></div>
                             </div>
-                            <div class="col-md-5 pro-left pro-type-2">
+                            <div class="col-lg-5 pro-left pro-type-2">
                                 <div class="pro-b-text">
                                     <div class="tag-box">
                                         <div class="tag">Social Media</div>
@@ -151,7 +152,10 @@
                 <div class="pt-content d-none" data-pt-con="branding">
                     <div class="project-box">
                         <div class="row">
-                            <div class="col-md-5 pro-left pro-type-1">
+                            <div class="col-lg-7 pro-right order-lg-1">
+                                <div class="pro-b-img"><img src="image/project-1.png" alt="" class="w-100"></div>
+                            </div>
+                            <div class="col-lg-5 pro-left pro-type-1 order-lg-0">
                                 <div class="pro-b-text">
                                     <div class="tag-box">
                                         <div class="tag">Social Media</div>
@@ -161,31 +165,29 @@
                                         <div class="tag">Strategy</div>
                                     </div>
                                     <div class="pro-title">
-                                        Banish shoes 2
+                                        Banish shoes 1
                                     </div>
                                     <div class="pro-des">
                                         <p>From brand strategy, naming, and logo design, to guidelines, campaigns, and
                                             content, we build brands that connect with your target audience.</p>
                                     </div>
                                     <div class="pro-btn">
-                                        <a href="#" class="th-arrow-btn">
+                                        <a href="case-study.html" class="th-arrow-btn">
                                             <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                             <span class="btn-text">Learn More</span>
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-7 pro-right">
-                                <div class="pro-b-img"><img src="image/project-1.png" alt="" class="w-100"></div>
-                            </div>
+
                         </div>
                     </div>
                     <div class="project-box">
                         <div class="row">
-                            <div class="col-md-7 pro-right">
+                            <div class="col-lg-7 pro-right">
                                 <div class="pro-b-img"><img src="image/project-2.png" alt="" class="w-100"></div>
                             </div>
-                            <div class="col-md-5 pro-left pro-type-2">
+                            <div class="col-lg-5 pro-left pro-type-2">
                                 <div class="pro-b-text">
                                     <div class="tag-box">
                                         <div class="tag">Social Media</div>
@@ -195,7 +197,7 @@
                                         <div class="tag">Strategy</div>
                                     </div>
                                     <div class="pro-title">
-                                        Banish shoes 2
+                                        Banish shoes 1
                                     </div>
                                     <div class="pro-des">
                                         <p>From brand strategy, naming, and logo design, to guidelines, campaigns, and
@@ -215,7 +217,10 @@
                 <div class="pt-content d-none" data-pt-con="paid-media">
                     <div class="project-box">
                         <div class="row">
-                            <div class="col-md-5 pro-left pro-type-1">
+                            <div class="col-lg-7 pro-right order-lg-1">
+                                <div class="pro-b-img"><img src="image/project-1.png" alt="" class="w-100"></div>
+                            </div>
+                            <div class="col-lg-5 pro-left pro-type-1 order-lg-0">
                                 <div class="pro-b-text">
                                     <div class="tag-box">
                                         <div class="tag">Social Media</div>
@@ -225,31 +230,29 @@
                                         <div class="tag">Strategy</div>
                                     </div>
                                     <div class="pro-title">
-                                        Banish shoes 2
+                                        Banish shoes 1
                                     </div>
                                     <div class="pro-des">
                                         <p>From brand strategy, naming, and logo design, to guidelines, campaigns, and
                                             content, we build brands that connect with your target audience.</p>
                                     </div>
                                     <div class="pro-btn">
-                                        <a href="#" class="th-arrow-btn">
+                                        <a href="case-study.html" class="th-arrow-btn">
                                             <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                             <span class="btn-text">Learn More</span>
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-7 pro-right">
-                                <div class="pro-b-img"><img src="image/project-1.png" alt="" class="w-100"></div>
-                            </div>
+
                         </div>
                     </div>
                     <div class="project-box">
                         <div class="row">
-                            <div class="col-md-7 pro-right">
+                            <div class="col-lg-7 pro-right">
                                 <div class="pro-b-img"><img src="image/project-2.png" alt="" class="w-100"></div>
                             </div>
-                            <div class="col-md-5 pro-left pro-type-2">
+                            <div class="col-lg-5 pro-left pro-type-2">
                                 <div class="pro-b-text">
                                     <div class="tag-box">
                                         <div class="tag">Social Media</div>
@@ -259,7 +262,7 @@
                                         <div class="tag">Strategy</div>
                                     </div>
                                     <div class="pro-title">
-                                        Banish shoes 2
+                                        Banish shoes 1
                                     </div>
                                     <div class="pro-des">
                                         <p>From brand strategy, naming, and logo design, to guidelines, campaigns, and
@@ -279,7 +282,10 @@
                 <div class="pt-content d-none" data-pt-con="influencer-marketing">
                     <div class="project-box">
                         <div class="row">
-                            <div class="col-md-5 pro-left pro-type-1">
+                            <div class="col-lg-7 pro-right order-lg-1">
+                                <div class="pro-b-img"><img src="image/project-1.png" alt="" class="w-100"></div>
+                            </div>
+                            <div class="col-lg-5 pro-left pro-type-1 order-lg-0">
                                 <div class="pro-b-text">
                                     <div class="tag-box">
                                         <div class="tag">Social Media</div>
@@ -289,31 +295,29 @@
                                         <div class="tag">Strategy</div>
                                     </div>
                                     <div class="pro-title">
-                                        Banish shoes 2
+                                        Banish shoes 1
                                     </div>
                                     <div class="pro-des">
                                         <p>From brand strategy, naming, and logo design, to guidelines, campaigns, and
                                             content, we build brands that connect with your target audience.</p>
                                     </div>
                                     <div class="pro-btn">
-                                        <a href="#" class="th-arrow-btn">
+                                        <a href="case-study.html" class="th-arrow-btn">
                                             <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                             <span class="btn-text">Learn More</span>
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-7 pro-right">
-                                <div class="pro-b-img"><img src="image/project-1.png" alt="" class="w-100"></div>
-                            </div>
+
                         </div>
                     </div>
                     <div class="project-box">
                         <div class="row">
-                            <div class="col-md-7 pro-right">
+                            <div class="col-lg-7 pro-right">
                                 <div class="pro-b-img"><img src="image/project-2.png" alt="" class="w-100"></div>
                             </div>
-                            <div class="col-md-5 pro-left pro-type-2">
+                            <div class="col-lg-5 pro-left pro-type-2">
                                 <div class="pro-b-text">
                                     <div class="tag-box">
                                         <div class="tag">Social Media</div>
@@ -323,7 +327,7 @@
                                         <div class="tag">Strategy</div>
                                     </div>
                                     <div class="pro-title">
-                                        Banish shoes 2
+                                        Banish shoes 1
                                     </div>
                                     <div class="pro-des">
                                         <p>From brand strategy, naming, and logo design, to guidelines, campaigns, and
