about and project page responsite

--- a/about-us.html
+++ b/about-us.html
@@ -241,7 +241,7 @@
             <div class="container-xxl">
                 <h2>A glimpse of our past</h2>
             </div>
-            <div class="container-xxl p-0 mt-5">
+            <div class=" p-0 mt-5">
                 <div class="swiper mySwiper" id="mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide" id="glimg-1"><img src="image/i1.png" alt=""></div>
@@ -288,7 +288,7 @@
                     </div>
                 </div> -->
                 <div class="row justify-content-center text-center">
-                    <div class="col-sm-10 col-md-8 mt-4 glimg-text">
+                    <div class="col-sm-10 col-md-8 mt-4 mt-lg-5 glimg-text">
                         <p class="" data-gli-text="glimg-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
                             iusto
                             rem minima, dolorum molestias minus hic. Eaque eum labore at deserunt ut numquam modi
@@ -485,10 +485,10 @@
             slidesPerView: 4,
           },
           768: {  // large screens
-            slidesPerView: 3,
+            slidesPerView: 5,
           },
           1024: {  // extra large screens
-            slidesPerView: 4,
+            slidesPerView: 6,
           },
         },
         on: {
