all page responsive done

--- a/careers.html
+++ b/careers.html
@@ -48,7 +48,7 @@
             <div class="crh-text">
                 <div class="container-xxl">
                     <div class="row justify-content-center text-center">
-                        <div class="col-xl-6 col-md-8 col-10">
+                        <div class="col-xl-6 col-md-8 col-sm-10">
                             <h2>We’re not just like any other agency!</h2>
                             <p>Our team is dedicated to crafting innovative strategies that stand out and connect with
                                 people. Join us in shaping the future of marketing and making your mark with confidence.
@@ -64,12 +64,12 @@
         <section class="workplace">
             <div class="container-xxl">
                 <div class="row">
-                    <div class="col-md-8 col-lg-6 mb-4">
+                    <div class="col-md-10 col-lg-8 col-xl-6 mb-4">
                         <h2>We have Three workplace mantras</h2>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-sm-6 mt-4 col-lg-4">
                         <div class="work-box">
                             <div class="wb-num">01.</div>
                             <div class="wb-title">The Beauty of Eloquence</div>
@@ -81,7 +81,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-6 mt-4 col-lg-4">
                         <div class="work-box">
                             <div class="wb-num">02.</div>
                             <div class="wb-title">Family Is Everything</div>
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-6 mt-4 col-lg-4">
                         <div class="work-box">
                             <div class="wb-num">03.</div>
                             <div class="wb-title">From Wonder? To Wonder!</div>
@@ -235,32 +235,33 @@
         <section class="we-are-looking">
             <div class="container-xxl">
                 <div class="row justify-content-between align-items-center">
-                    <div class="col-md-6">
+                    <div class="col-md-5 order-md-1 ">
+                        <div class="wal-img"><img src="image/we-are-looking.png" alt="" class="w-100"></div>
+                    </div>
+                    <div class="col-md-6 order-md-0 mt-4 mt-md-0">
                         <div class="wal-text">
                             <h2>We’re looking for thinkers who think differently</h2>
                             <p>If you’d like to add your light to our House, see if our present needs match your unique talents. Check out <a href="#openings">Current Openings.</a></p>
                         </div>
                     </div>
-                    <div class="col-md-5">
-                        <div class="wal-img"><img src="image/we-are-looking.png" alt="" class="w-100"></div>
-                    </div>
+                   
                 </div>
             </div>
         </section>
         <!-- We Are Looking Section End -->
 
         <!-- Openings Section Start -->
-        <section class="opening">
+        <section class="opening" id="openings">
             <div class="container-xxl">
                 <div class="row">
                     <div class="col-12 mb-4"><h2 class="mb-r">Openings</h2></div>
                 </div>
-                <div class="opening-head">
-                    <div class="row justify-content-between">
-                        <div class="col-3">
+                <div class="opening-head ">
+                    <div class="row justify-content-between d-none d-md-block">
+                        <div class="col-3 ">
                             <h5>Position</h5>
                         </div>
-                        <div class="col-3 d-none d-md-block">
+                        <div class="col-3 ">
                             <h5>Location</h5>
                         </div>
                         <div class="col-3 d-none d-md-block">
@@ -375,7 +376,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 d-flex justify-content-end align-items-end">
+                    <div class="col-md-3 d-flex justify-content-md-end align-items-end">
                         <div class="social-box">
                             <h5 class="mb-3">Connect</h5>
                             <ul class="m-0 p-0 d-flex gap-3">
