--- a/job-description.html
+++ b/job-description.html
@@ -50,7 +50,7 @@
                 <div class="jd-h-box">
                     <div class="row align-items-center">
                         <div class="col-md-9">
-                            <div class="d-flex gap-2 align-items-center">
+                            <div class="d-flex gap-3 align-items-center">
                                 <div class="jdh-img"><a href="careers.html"><img src="image/main-arrow.png"
                                             class="w-100" alt=""></a></div>
                                 <div class="">
@@ -58,8 +58,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 d-flex justify-content-end align-items-end">
-                            <div class="social-box">
+                        <div class="col-md-3 d-flex justify-content-center justify-content--md-end align-items-end">
+                            <div class="social-box text-center text-lg-start">
                                 <h5 class="mb-3">Connect</h5>
                                 <ul class="m-0 p-0 d-flex gap-3">
                                     <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
