--- a/service.html
+++ b/service.html
@@ -62,8 +62,10 @@
                         <h2>Outreach & Marketing solution</h2>
                         <div class="ous-cont">
                             <div class="row justify-content-between">
-                                <div class="col-lg-5 mt-3"><img src="image/our-sol-1.jpg" alt="" class="w-100"></div>
-                                <div class="col-lg-6 mt-3">
+                                <div class="col-lg-5 mt-md-3 p-0">
+                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                </div>
+                                <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
                                             <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
@@ -93,8 +95,10 @@
                         <h2>FILM & PHOTOGRAPHY</h2>
                         <div class="ous-cont">
                             <div class="row justify-content-between">
-                                <div class="col-lg-5 mt-3"><img src="image/our-sol-1.jpg" alt="" class="w-100"></div>
-                                <div class="col-lg-6 mt-3">
+                                <div class="col-lg-5 mt-md-3 p-0">
+                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                </div>
+                                <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
                                             <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
@@ -121,11 +125,13 @@
                         <h6>03.</h6>
                     </div>
                     <div class="ous-right">
-                        <h2>MEDIA SOLUTIONS</h2>
+                        <h2>Outreach</h2>
                         <div class="ous-cont">
                             <div class="row justify-content-between">
-                                <div class="col-lg-5 mt-3"><img src="image/our-sol-1.jpg" alt="" class="w-100"></div>
-                                <div class="col-lg-6 mt-3">
+                                <div class="col-lg-5 mt-md-3 p-0">
+                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                </div>
+                                <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
                                             <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
@@ -155,8 +161,10 @@
                         <h2>CREATIVE & BRANDING</h2>
                         <div class="ous-cont">
                             <div class="row justify-content-between">
-                                <div class="col-lg-5 mt-3"><img src="image/our-sol-1.jpg" alt="" class="w-100"></div>
-                                <div class="col-lg-6 mt-3">
+                                <div class="col-lg-5 mt-md-3 p-0">
+                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                </div>
+                                <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
                                             <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
@@ -186,8 +194,10 @@
                         <h2>WEB & AR</h2>
                         <div class="ous-cont">
                             <div class="row justify-content-between">
-                                <div class="col-lg-5 mt-3"><img src="image/our-sol-1.jpg" alt="" class="w-100"></div>
-                                <div class="col-lg-6 mt-3">
+                                <div class="col-lg-5 mt-md-3 p-0">
+                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                </div>
+                                <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
                                             <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
@@ -217,8 +227,10 @@
                         <h2>OUTSIDE OF HOME</h2>
                         <div class="ous-cont">
                             <div class="row justify-content-between">
-                                <div class="col-lg-5 mt-3"><img src="image/our-sol-1.jpg" alt="" class="w-100"></div>
-                                <div class="col-lg-6 mt-3">
+                                <div class="col-lg-5 mt-md-3 p-0">
+                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                </div>
+                                <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
                                         <div class="">
                                             <p>Elevate your brand's presence with our Outreach & Marketing Solutions,
