--- a/swm-case-study.html
+++ b/swm-case-study.html
@@ -51,7 +51,7 @@
                             <p>A Siele Certified Spanish teaching Institute</p>
                         </div>
                     </div>
-                    <div class="col-md-4 d-flex justify-content-end">
+                    <div class="col-md-4 d-flex justify-content-lg-end mt-3">
                         <div class="cah-right">
                             <p>Project </p>
                             <div class="tag-box">
@@ -113,7 +113,7 @@
         <section class="case-visual-identity">
             <div class="container-xxl">
                 <div class="row justify-content-between">
-                    <div class="col-10 col-md-6 col-lg-4 d-flex gap-4 align-items-center">
+                    <div class="col-sm-8 col-md-6 col-lg-4 d-flex gap-2 gap-md-4 align-items-center">
                         <div class="cavi-img"><img src="image/main-arrow.png" alt=""></div>
                         <div class="">
                             <h4 class="m-0">
@@ -122,7 +122,7 @@
                             </h4>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 mt-3 mt-md-0">
                         <p class="m-0">From logo design to font choices, every element of our website's visual identity
                             is meticulously crafted to maintain consistency with the 'Money Heist' brand, ensuring a
                             cohesive and impactful user experience.</p>
@@ -147,13 +147,13 @@
         <section class="case-study-website">
             <div class="container-xxl">
                 <div class="casw-text">
-                    <div class="row">
-                        <div class="col-md-6">
+                    <div class="row align-items-center">
+                        <div class="col-6 p-0">
                             <div class="casw-text-left">
-                                <h4>Website Building</h4>
+                                <h4 class="m-0">Website Building</h4>
                             </div>
                         </div>
-                        <div class="col-md-6 d-flex justify-content-end">
+                        <div class="col-6 p-0 d-flex justify-content-end">
                             <div class="casw-text-right">
                                 <a href="#" class="th-arrow-btn">
                                     <span class="btn-text">View Project</span>
@@ -168,26 +168,26 @@
                 <video src="image/case-study/swm/case-hero-4.mp4" autoplay loop muted class="w-100"></video>
             </div>
             <div class="container-xxl">
-                <div class="casw-text-bottom">
-                    <div class="row justify-content-between">
-                        <div class="col-md-7 text-center">
-                            <h3>Audience-Centric Design</h3>
+                <div class="casw-text-bottom p-md-4">
+                    <div class="row justify-content-between align-items-center">
+                        <div class="col-md-7">
+                            <h3 class="m-md-0">Audience-Centric Design</h3>
                         </div>
                         <div class="col-md-5 col-lg-4">
-                            <p class="">We created a website inspired by the Spanish Netflix hit series, tailored to
+                            <p class="m-md-0">We created a website inspired by the Spanish Netflix hit series, tailored to
                                 engage our target audience of Gen Z teenagers to young professionals.</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="container-xxl">
-                <div class="casw-text-bottom">
-                    <div class="row justify-content-between">
-                        <div class="col-md-7 text-center">
-                            <h3>Interactive Features</h3>
+                <div class="casw-text-bottom p-md-4">
+                    <div class="row justify-content-between align-items-center">
+                        <div class="col-md-7">
+                            <h3 class="m-md-0">Interactive Features</h3>
                         </div>
                         <div class="col-md-5 col-lg-4">
-                            <p class="">We created a website inspired by the Spanish Netflix hit series, tailored to
+                            <p class="m-md-0">We created a website inspired by the Spanish Netflix hit series, tailored to
                                 engage our target audience of Gen Z teenagers to young professionals.</p>
                         </div>
                     </div>
@@ -199,11 +199,11 @@
         <!-- Case Study Project Slider Section Start -->
         <section class="case-study-project">
             <div class="container-xxl">
-                <div class="row align-items-end">
-                    <div class="col-md-6">
+                <div class="row align-items-end ">
+                    <div class="col-sm-6 mb-sm-3">
                         <h3><b>View More Projects</b></h3>
                     </div>
-                    <div class="col-md-6 d-flex justify-content-end">
+                    <div class="col-sm-6 mb-sm-3 d-flex justify-content-sm-end">
                         <div class="">
                             <a href="#" class="text-decoration-underline"><p>Go Back to Project</p></a>
                         </div>
